[package]
name = "realfft"
version = "0.5.0"
authors = ["HEnquist <henrik.enquist@gmail.com>"]
edition = "2018"
description = "Real-to-complex FFT and complex-to-real iFFT for Rust"
license = "MIT"
repository = "https://github.com/HEnquist/realfft"
keywords = ["fft", "dft", "discrete", "fourier", "transform"]
categories = ["algorithms", "compression", "multimedia::encoding", "science"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustfft = "5.0.0"

[dev-dependencies]
criterion = "0.3"
rand = "0.8.1"

[[bench]]
name = "realfft"
harness = false