[package]
name = "realfft"
version = "3.5.0"
authors = ["HEnquist <henrik.enquist@gmail.com>"]
edition = "2018"
description = "Real-to-complex forward FFT and complex-to-real inverse FFT for Rust"
license = "MIT"
repository = "https://github.com/HEnquist/realfft"
keywords = ["fft", "dft", "discrete", "fourier", "transform"]
categories = ["algorithms", "compression", "multimedia::encoding", "science"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# Map RealFFT's features one-to-one with RustFFT's. For more information, refer
# to the Feature Flags section at https://docs.rs/rustfft/latest/rustfft/
default = ["rustfft/default"]
avx = ["rustfft/avx"]
sse = ["rustfft/sse"]
neon = ["rustfft/neon"]
wasm_simd = ["rustfft/wasm_simd"]

[dependencies]
rustfft = { version = "6.4.0", default-features = false }

[dev-dependencies]
criterion = "0.6"
rand = "0.9"

[[bench]]
name = "realfft"
harness = false
